# mobileBankingApp

./: AccessManager.cpp  AccessManager.h  Account.h  AccountsManager.cpp  AccountsManager.h  Alert.cpp  Alert.h  AlertsManager.cpp  AlertsManager.h  BankBranch.cpp  BankBranch.h  CMakeLists.txt  CardTransaction.h  Deposit.h  InputManager.cpp  InputManager.h  Interface.cpp  Interface.h  PersonalArea.cpp  PersonalArea.h  PhoneRecharge.cpp  PhoneRecharge.h  Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  README.md  Reminder.cpp  Reminder.h  RemindersManager.cpp  RemindersManager.h  SecurityManager.cpp  SecurityManager.h  SmartLock.cpp  SmartLock.h  Transaction.cpp  Transaction.h  WelcomePage.cpp  WelcomePage.h  WireTransfer.cpp  (+4 more)
project_files/: AccessManager.cpp  AccessManager.h  AccessManagerView.cpp  AccessManagerView.h  Account.cpp  Account.h  AccountsManager.cpp  AccountsManager.h  AccountsManagerView.cpp  AccountsManagerView.h  Alert.cpp  Alert.h  AlertsManager.cpp  AlertsManager.h  AlertsManagerView.cpp  AlertsManagerView.h  BankBranch.h  BankBranchView.cpp  BankBranchView.h  CMakeLists.txt  CardTransaction.cpp  DateSetter.cpp  DateSetter.h  Deposit.cpp  InputManager.cpp  InputManager.h  Interface.cpp  Interface.h  PersonalArea.cpp  PersonalArea.h  PersonalAreaView.cpp  PersonalAreaView.h  PhoneRecharge.cpp  Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  ProfileManagerView.cpp  ProfileManagerView.h  ProfileView.cpp  (+18 more)
project_files/alert_classes/: Alert.cpp  Alert.h  AlertsManager.cpp  AlertsManager.h  AlertsManagerView.cpp  AlertsManagerView.h
project_files/banking_accounts_classes/: BankingAccount.cpp  BankingAccount.h  BankingAccountView.cpp  BankingAccountView.h  BankingAccountsManagerView.cpp  BankingAccountsManagerView.h  CardTransaction.cpp  CardTransaction.h  ChargeCard.cpp  ChargeCard.h  ChargeCardManagerView.cpp  ChargeCardManagerView.h  ChargeCardView.cpp  ChargeCardView.h  Compare.cpp  Compare.h  PhoneRecharge.cpp  PhoneRecharge.h  Transaction.cpp  Transaction.h  WireTransfer.cpp  WireTransfer.h
project_files/general_purpose_classes/: DateSetter.cpp  DateSetter.h  InputManager.cpp  InputManager.h  utilityFunctions.cpp  utilityFunctions.h
project_files/login_classes/: AccessManager.cpp  AccessManager.h  AccessManagerView.cpp  AccessManagerView.h  Account.cpp  Account.h  AccountsManagerView.cpp  AccountsManagerView.h  PersonalAreaView.cpp  PersonalAreaView.h  SmartLock.cpp  SmartLock.h  SmartLockView.cpp  SmartLockView.h  WelcomePage.cpp  WelcomePage.h
project_files/profile_classes/: BankBranchView.h  Profile.cpp  Profile.h  ProfileManagerView.cpp  ProfileManagerView.h  ProfileView.cpp  ProfileView.h  SecurityManager.cpp  SecurityManager.h  SecurityManagerView.cpp  SecurityManagerView.h
project_files/reminder_classes/: Reminder.cpp  Reminder.h  RemindersManager.cpp  RemindersManager.h  RemindersManagerView.cpp  RemindersManagerView.h
server/: existing_accounts
server/Eleonora Frangetti/: banking_accounts
server/Eleonora Frangetti/alerts/: Changes to privacy settings  Christmas holidays  Large withdrawal
server/Eleonora Frangetti/profile/: security_settings
server/Eleonora Frangetti/reminders/: Check withdrawals  Credit card
server/eleonora_frangetti/alerts/: Large withdrawal  New credit card
server/eleonora_frangetti/profile/: bank_branch  personal_informations  security_settings
server/eleonora_frangetti/reminders/: Birthday  Pay rent
test/: AccessManagerSuite.cpp  AccountSuite.cpp  AlertSuite.cpp  AlertsManagerSuite.cpp  BankingAccountSuite.cpp  CMakeLists.txt  ChargeCardSuite.cpp  CompareSuite.cpp  PhoneRechargeSuite.cpp  ReminderSuite.cpp  RemindersManagerSuite.cpp  SecurityManagerSuite.cpp  SmartLockSuite.cpp  TransactionSuite.cpp  WelcomePageSuite.cpp  WireTransferSuite.cpp  runAllTests.cpp
test/files_for_testing/: bankingAccount.txt  chargeCard.txt
test/lib/googletest/: CMakeLists.txt
